--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,19 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.title {
+  margin-right: 3rem;
+  padding-top: 0.5rem;
+  font-size: 1.5rem;
+  color: #636363;
+}
+.section {
+  font-size: 1.2rem;
+}
+.nav-link {
+  padding-right: 5rem;
+}
+.hero {
+  margin-top: 86px;
 }
