--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: #636363;
 }
 .title {
   margin-right: 3rem;
   padding-top: 0.5rem;
   font-size: 1.5rem;
-  color: #636363;
 }
 .section {
   font-size: 1.2rem;
@@ -16,4 +16,25 @@ body {
 }
 .hero {
   margin-top: 86px;
+}
+.row {
+  margin-left: 30px;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+}
+.logo {
+  width: 100px;
+  padding-top: 20px;
+}
+.card {
+  max-width: 500px;
+  margin-top: 30px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+.title1 {
+  text-align: center;
+  margin-top: 30px;
 }
