add content cards and logos

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   margin-left: 30px;
   margin-right: 30px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 .logo {
@@ -27,8 +28,9 @@ body {
   padding-top: 20px;
 }
 .card {
-  max-width: 500px;
+  max-width: 400px;
   margin-top: 30px;
+
   display: flex;
   text-align: center;
   align-items: center;
