--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 .card {
   max-width: 400px;
   margin-top: 30px;
-
+  margin-left: 5px;
   display: flex;
   text-align: center;
   align-items: center;
@@ -40,7 +40,7 @@ body {
   margin-top: 40px;
 }
 .copyright-box {
-  width: 100%;
+  width: 100vw;
   margin-left: 0;
   margin-right: 0;
 }
