--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: #636363;
   margin-top: 86px;
+  text-decoration: none;
 }
 .title {
   margin-right: 1rem;
