--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ body {
   text-align: center;
   margin-top: 40px;
 }
+.box-contact {
+  padding: 30px 0 30px 30px;
+  width: 100%;
+  margin-left: 0;
+  background-color: #f8f9fa;
+}
 .copyright-box {
   width: 100vw;
   margin-left: 0;
