--- a/src/index.css
+++ b/src/index.css
@@ -43,11 +43,12 @@ body {
 }
 .box-portfolio {
   width: 100%;
-  margin: 30px 0 30px 0;
-  margin: 0;
+}
+.text {
+  padding: 15px;
 }
 .box-contact {
-  padding: 30px 0 30px 30px;
+  padding: 30px 0 15px 30px;
   width: 100%;
   margin-left: 0;
   background-color: #f8f9fa;
